--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,8 @@ body {
 #windows-home {
     background-color: transparent !important;
 }
+#windows iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
