Updated hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,9 @@ body {
     #menu li:hover #menu-desc {
         display: block;
     }
+    #hamburger {
+        display: none;
+    }
 }
 
 #menu .active {
