Added charts to pomodoro

--- a/desktop-dev/views/index.html
+++ b/desktop-dev/views/index.html
@@ -81,6 +81,8 @@
 						<td><span id="module-pomodoro-other">&#x25b7;</span></td>
 					</tr>
 				</table>
+				<br/>
+				<canvas id="pomodoro-chart" viewBox="0 0 440 220" style="width: 100%;"></canvas>
 			</div>
 
 			<div class="module module-pictures">
@@ -114,6 +116,7 @@
 			</div>
 		</div>
 
+		<script type="text/javascript" src="../js/chart.min.js"></script>
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script type="text/javascript" src="../js/windows/index.js"></script>
 		<script type="text/javascript" src="../js/modules/music.js"></script>
