--- a/desktop-dev/views/index.html
+++ b/desktop-dev/views/index.html
@@ -120,6 +120,7 @@
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script type="text/javascript" src="../js/windows/index.js"></script>
 		<script type="text/javascript" src="../js/modules/music.js"></script>
+		<script type="text/javascript" src="../js/modules/pictures.js"></script>
 		<script type="text/javascript" src="../js/modules/pomodoro.js"></script>
 		<script type="text/javascript" src="../js/modules/tools.js"></script>
 	</body>
