--- a/desktop-dev/views/index.html
+++ b/desktop-dev/views/index.html
@@ -117,6 +117,7 @@
 		</div>
 
 		<script type="text/javascript" src="../js/chart.min.js"></script>
+		<script type="text/javascript" src="../js/chartjs-plugin-annotation.min.js"></script>
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script type="text/javascript" src="../js/windows/index.js"></script>
 		<script type="text/javascript" src="../js/modules/music.js"></script>
