Auto music mode

--- a/desktop-dev/views/index.html
+++ b/desktop-dev/views/index.html
@@ -25,7 +25,8 @@
 				<span id="module-music-next">&#9197;</span><br/><br/>
 				<span id="module-music-decVol">&#128265;</span>
 				<span id="module-music-volume">50%</span>
-				<span id="module-music-incVol">&#128266;</span><br/>
+				<span id="module-music-incVol">&#128266;</span><br/><br/>
+				<span id="module-music-auto">Auto</span>
 
 				<audio id="audio" src="" controls> 
 					Votre navigateur ne supporte pas cette fonction.
