Adds video timer, add a way to disable timers

--- a/desktop-dev/views/index.html
+++ b/desktop-dev/views/index.html
@@ -48,38 +48,48 @@
 
 					<tr>
 						<td>Travail</td>
-						<td></td>
+						<td rowspan="2"><span id="module-pomodoro-work">&#9654;</span></td>
 						<td rowspan="2" id="module-pomodoro-work-day-percentage">0%</td>
 						<td rowspan="2" id="module-pomodoro-work-week-percentage">0%</td>
 						<td rowspan="2" id="module-pomodoro-work-month-percentage">0%</td>
 					</tr>
 					<tr>
 						<td id="module-pomodoro-work-time">00:00:00</td>
-						<td><span id="module-pomodoro-work">&#9654</span></td>
 					</tr>
 
 					<tr>
 						<td>Jeux</td>
-						<td></td>
+						<td rowspan="2"><span id="module-pomodoro-game">&#9654;</span></td>
 						<td rowspan="2" id="module-pomodoro-game-day-percentage">0%</td>
 						<td rowspan="2" id="module-pomodoro-game-week-percentage">0%</td>
 						<td rowspan="2" id="module-pomodoro-game-month-percentage">0%</td>
 					</tr>
 					<tr>
 						<td id="module-pomodoro-game-time">00:00:00</td>
-						<td><span id="module-pomodoro-game">&#9654</span></td>
 					</tr>
 
 					<tr>
 						<td>Autre</td>
-						<td></td>
+						<td rowspan="2"><span id="module-pomodoro-other">&#x25b7;</span></td>
 						<td rowspan="2" id="module-pomodoro-other-day-percentage">0%</td>
 						<td rowspan="2" id="module-pomodoro-other-week-percentage">0%</td>
 						<td rowspan="2" id="module-pomodoro-other-month-percentage">0%</td>
 					</tr>
+
 					<tr>
 						<td id="module-pomodoro-other-time">00:00:00</td>
-						<td><span id="module-pomodoro-other">&#x25b7;</span></td>
+					</tr>
+
+					<tr>
+						<td>Videos</td>
+						<td rowspan="2"><span id="module-pomodoro-videos">&#9654;</span></td>
+						<td rowspan="2" id="module-pomodoro-videos-day-percentage">0%</td>
+						<td rowspan="2" id="module-pomodoro-videos-week-percentage">0%</td>
+						<td rowspan="2" id="module-pomodoro-videos-month-percentage">0%</td>
+					</tr>
+
+					<tr>
+						<td id="module-pomodoro-videos-time">00:00:00</td>
 					</tr>
 				</table>
 				<br/>
