--- a/desktop/views/index.html
+++ b/desktop/views/index.html
@@ -17,11 +17,11 @@
 				<b>Music</b><br/>
 				<br/>
 				<span id="module-music-album"></span><br/>
-				<img id="module-music-img" src="" onError="this.src='G:/Musique/_icons/noimage.jpg';"><br/>
+				<img id="module-music-img" src="" onError="this.src='PATHTOMUSIC/_icons/noimage.jpg';"><br/>
 				<span id="module-music-time">0:00/0:00</span><br/>
 				<span id="module-music-title">Empty playlist</span><br/><br/>
 				<span id="module-music-prev">◁◁</span>
-				<span id="module-music-playPause">▷</span>
+				<span id="module-music-playPause">▶</span>
 				<span id="module-music-next">▷▷</span><br/><br/>
 				<span id="module-music-decVol">&#128265;</span>
 				<span id="module-music-volume">50%</span>
@@ -34,5 +34,6 @@
 
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script type="text/javascript" src="../js/windows/index.js"></script>
+		<script type="text/javascript" src="../js/modules/music.js"></script>
 	</body>
 </html>
