Random picture module

--- a/desktop/views/index.html
+++ b/desktop/views/index.html
@@ -93,6 +93,8 @@
 				<br/>
 				<canvas id="pomodoro-chart" viewBox="0 0 440 220" style="width: 100%;"></canvas>
 			</div>
+
+			<div class="module module-pictures"></div> 
 		</div>
 
 		<script type="text/javascript" src="../js/chart.min.js"></script>
@@ -101,6 +103,7 @@
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script type="text/javascript" src="../js/windows/index.js"></script>
 		<script type="text/javascript" src="../js/modules/music.js"></script>
+		<script type="text/javascript" src="../js/modules/pictures.js"></script>
 		<script type="text/javascript" src="../js/modules/pomodoro.js"></script>
 	</body>
 </html>
