--- a/desktop/views/index.html
+++ b/desktop/views/index.html
@@ -94,7 +94,17 @@
 				<canvas id="pomodoro-chart" viewBox="0 0 440 220" style="width: 100%;"></canvas>
 			</div>
 
-			<div class="module module-pictures"></div> 
+			<div class="module module-pictures"></div>
+
+			<div class="module module-monitoring">
+				<b>Monitoring</b><br/>
+				<br/>
+				<table>
+					<tbody>
+						<tr><td></td></tr>
+					</tbody>
+				</table>
+			</div> 
 		</div>
 
 		<script type="text/javascript" src="../js/chart.min.js"></script>
@@ -102,6 +112,7 @@
 
 		<script type="text/javascript" src="../js/main.js"></script>
 		<script type="text/javascript" src="../js/windows/index.js"></script>
+		<script type="text/javascript" src="../js/modules/monitoring.js"></script>
 		<script type="text/javascript" src="../js/modules/music.js"></script>
 		<script type="text/javascript" src="../js/modules/pictures.js"></script>
 		<script type="text/javascript" src="../js/modules/pomodoro.js"></script>
