--- a/desktop/css/style.css
+++ b/desktop/css/style.css
@@ -320,3 +320,11 @@ audio {
 	max-width: 100%;
 	max-height: 50vh;
 }
+
+/**
+ * Module monitoring
+ */
+.module-monitoring table {
+	width: 100%;
+	text-align: left;
+}
